Changed routing, removed Controller and added path parameter for /templates
